--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.23.4",
     "@vercel/kv": "^2.0.0",
     "next": "14.2.6",
     "react": "^18",
